# GLvsBGFX

./: .gitignore  .gitmodules  CMakeLists.txt  Renderer.h  Texture.cpp  Texture.h  Vertex.h  main.cpp
bgfx/: Renderer.cpp  bgfx_shader.sh  default_frag.sc  default_vert.sc  varying.def.sc
cmake/: 3rdparty.cmake  shaderc.cmake
cmake/Hunter/: config.cmake
gl/: BrebisGL.h  Renderer.cpp
